# pdfmd

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/: heuristics.rs  lib.rs  main.rs
src/extract/: cmap.rs  content.rs  encoding.rs  font.rs  glyphs.rs  image.rs  mod.rs  parser.rs
src/pdf/: deflate.rs  mod.rs  object.rs  parser.rs
tests/: integration.rs
