[package]
name = "rust-parse"
version = "0.1.0"
edition = "2021"
description = "Convert PDF documents into Markdown"

[dependencies]
lopdf = "0.34"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"

[profile.release]
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
strip = false
