[package]
name = "pdfmd"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Cole McIntosh <colemcintosh6@gmail.com>"]
description = "Fast PDF to Markdown converter with a from-scratch text extractor"
readme = "README.md"
license = "MIT"
repository = "https://github.com/colesmcintosh/pdfmd"
homepage = "https://github.com/colesmcintosh/pdfmd"
keywords = ["pdf", "markdown", "parser", "converter", "text-extraction"]
categories = ["command-line-utilities", "parser-implementations", "text-processing"]

[dependencies]
lopdf = "0.34"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
strip = false
