[package]
name = "pdfmd"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Cole McIntosh <colemcintosh6@gmail.com>"]
description = "Fast, dependency-free PDF to Markdown converter"
readme = "README.md"
license = "MIT"
repository = "https://github.com/colesmcintosh/pdfmd"
homepage = "https://github.com/colesmcintosh/pdfmd"
keywords = ["pdf", "markdown", "parser", "converter", "text-extraction"]
categories = ["command-line-utilities", "parser-implementations", "text-processing"]

# Zero runtime dependencies by design. The PDF reader, zlib/DEFLATE
# decoder, font/CMap handling, content-stream interpreter, CLI parser,
# and parallel work-stealer are all implemented in this crate.
[dependencies]

[profile.release]
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
strip = false
